- Fixed prev/next navigation color contrast and mobile appearance. - (Almost) fixed the target behavior on divider: the text following the divider is no longer behind the scrolled navigation.

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -66,4 +66,6 @@ h3.divider {
 	background: $dark-blue;
 	color: $white;
 	padding: .25em 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
