--- a/scss/layout/_posts.scss
+++ b/scss/layout/_posts.scss
@@ -61,18 +61,75 @@
   @include clearfix;
 
 	a {
-	 background-color: lighten($lightest-blue, 10%);
-	 border: 0;
+	 // background-color: lighten($lightest-blue, 10%);
+	 background-color: $blue;
+   border: 0;
 	 border-radius: $border-radius;
-	 color: $blue;
+	 color: #fff;
 	 display: inline-block;
-	 padding: .2em .5em;
+	 // padding: .2em .5em;
+  padding: .7em;
 
 	 &:hover, &:focus {
-	   background-color: $lightest-blue;
+	   // background-color: $lightest-blue;
+     background-color: lighten($lightest-blue, 10%);
+     color: $blue;
 	 }
 
+   .meta-nav {
+       position: relative;
+       top: -1px;
+   }
+
 	}
+
+  .nav-next a .meta-nav,
+  .nav-previous a .meta-nav {
+    position: absolute;
+    top: .6em;
+  }
+
+  .nav-next a {
+    text-align: right;
+    position: relative;
+    padding-right: 2em;
+
+    .meta-nav {
+        right: .4em;
+    }
+  }
+
+  .nav-previous a {
+    text-align: left;
+    position: relative;
+    padding-left: 2em;
+
+    .meta-nav {
+        left: .4em;
+    }
+  }
+
+  .nav-previous,
+  .nav-next {
+    max-width: 45%;
+    box-sizing: border-box;
+
+    @media screen and (max-width: 1080px) {
+      max-width: 100%;
+      width: 100%;
+      float: none;
+
+      &.nav-next {
+        margin-top: .4em;
+      }
+
+      a {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
 
   .nav-previous {
     float: left;
